Add project structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Snake - By Cyprium</title>
+	<link rel="stylesheet" type="text/css" href="assets/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-
+	<header>
+		<h1>Welcome to my Snake Game</h1>
+		<h2>Made in jQuery and HTML</h2>
+		
+	</header>
+	<section id="game"></section>
+	<footer>
+		<h2>This is an open source project, you can check the repo here: <a href="https://github.com/dev-cyprium/snake" target="_blank">GitHub</a></h2>
+	</footer>
 </body>
 </html>
