--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Snake - By Cyprium</title>
 	<link rel="stylesheet" type="text/css" href="assets/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
+
+
 </head>
 <body>
 	<header>
@@ -16,5 +18,8 @@
 	<footer>
 		<h2>This is an open source project, you can check the repo here: <a href="https://github.com/dev-cyprium/snake" target="_blank">GitHub</a></h2>
 	</footer>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+	<script src="assets/game.js"></script>
 </body>
 </html>
