Finish game with a little bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 		<h2>Made in jQuery and HTML</h2>
 		
 	</header>
+	
+	<section><h1>Score: <span id="score">0</span></h1></section>
 	<section id="game"></section>
+	<section id="game_over">
+		<h1>Game over!</h1>
+		<h2>You finished with the score of <span id="final" style="color: blue">score</span></h2>
+		<h2><button id="restart">Restart Game</button></h2>
+	</section>
+
 	<footer>
 		<h2>This is an open source project, you can check the repo here: <a href="https://github.com/dev-cyprium/snake" target="_blank">GitHub</a></h2>
 	</footer>
